--- a/flow-main/pom.xml
+++ b/flow-main/pom.xml
@@ -72,7 +72,7 @@
             <artifactId>nekohtml</artifactId>
             <version>1.9.22</version>
         </dependency>
-        <dependency>
+       <!-- <dependency>
             <groupId>org.webjars</groupId>
             <artifactId>jquery</artifactId>
             <version>3.4.1</version>
@@ -81,7 +81,7 @@
             <groupId>org.webjars</groupId>
             <artifactId>bootstrap</artifactId>
             <version>4.4.1</version>
-        </dependency>
+        </dependency>-->
         <!-- mybatis的分页插件 -->
         <dependency>
             <groupId>com.github.pagehelper</groupId>
