--- a/flow-main/src/main/resources/application.yml
+++ b/flow-main/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 ##\u6570\u636E\u5E93\u8FDE\u63A5##
 spring:
  datasource:
-  url: jdbc:mysql://localhost:3306/mybatis?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=UTF-8&useSSL=false
+  url: jdbc:mysql://localhost:3306/flow?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=UTF-8&useSSL=false
   username: root
   password: root
   driver-class-name: com.mysql.jdbc.Driver
