--- a/flow-main/src/main/resources/application.yml
+++ b/flow-main/src/main/resources/application.yml
@@ -34,6 +34,9 @@ spring:
    suffix: .html
  mvc:
   static-path-pattern: /**
+  hiddenmethod:
+    filter:
+      enabled: true
 ##mybatis配置
 mybatis:
   configuration:
